public/stylesheets/sass/slideshow.scss
@import "color";

#swift_slideshow_wrapper {
    margin-top: 5px;
    #swift_slideshow {
        background-color: #111;

        .photo,
        .description {
            display: none;
        }
        .photo {
            background-position: center;
            background-repeat: no-repeat;
            width: 470px;
            height: 353px;
        }
        .description {
            margin: 0 0 5px;
            font-family: helvetica, sans-serif;
            padding: 5px;
            background-color: $background_gray;
            position: relative;
            .photo_nav {
                position: absolute;
                top: 5px;
                right: 5px;
                font-size: 16px;
                font-weight: bold;
                div {
                    cursor: pointer;
                }
            }
        }
    }
}

